<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientConnect">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/connectionStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"
            android:text="@string/connection_prompt"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/connectionServerIPEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:ems="10"
            android:gravity="center"
            android:text="@string/connection_IP_hint"
            android:minHeight="48dp"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/connectionServerPortEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:minHeight="48dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/connection_port_hint" />

        <EditText
            android:id="@+id/connectionPIIPEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:minHeight="48dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/connection_PI_IP_hint" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:backgroundTint="@color/teal_700"
            android:gravity="center"
            android:onClick="connectToServer"
            android:text="@string/connection_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>